--- a/package.json
+++ b/package.json
@@ -44,29 +44,20 @@
     "release": "bumpp && pnpm publish",
     "start": "esno src/index.ts",
     "test": "vitest",
-    "typecheck": "tsc --noEmit",
-    "prepare": "simple-git-hooks"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.11.2",
     "@antfu/ni": "^0.23.1",
     "@antfu/utils": "^0.7.10",
     "@types/node": "^22.10.1",
     "bumpp": "^9.8.1",
-    "eslint": "^9.15.0",
     "esno": "^4.8.0",
     "lint-staged": "^15.2.10",
     "pnpm": "^9.14.3",
-    "simple-git-hooks": "^2.11.1",
+    "prettier": "^3.4.2",
     "typescript": "^5.7.2",
     "unbuild": "^2.0.0",
     "vite": "^6.0.1",
     "vitest": "^2.1.6"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   }
 }
